@@ -125,41 +125,32 @@ public class GenomicVariantRepo {
                     request);
             } else if (filterKnown) {
                 // STRATEGY 3: Start with dbSNP filter (moderately selective)
-                buildQueryWithDbsnpFilter(query,
+                buildQueryWithDbsnpFilter(query, parameters,
                         joinCodonTable, joinCadd, joinAm, joinPopEve, joinEsm1b,
                         filterByAlleleFreq, filterByConservation, filterStability,
-                        filterByCadd, filterByAm, filterByPopEve, filterByEsm1b);
+                        filterByCadd, filterByAm, filterByPopEve, filterByEsm1b,
+                        request);
             } else {
                 // STRATEGY 4: No highly selective filters - start with most selective score filter
                 // This is expensive but sometimes unavoidable
-                buildQueryWithScoreFilters(query,
+                buildQueryWithScoreFilters(query, parameters,
                         joinCodonTable, joinCadd, joinAm, joinPopEve, joinEsm1b,
                         filterByAlleleFreq, filterByConservation, filterStability,
-                        filterByCadd, filterByAm, filterByPopEve, filterByEsm1b);
+                        filterByCadd, filterByAm, filterByPopEve, filterByEsm1b,
+                        request);
             }
         }
 
-        // Add final WHERE clause filters
-        query.append("WHERE 1=1\n");
-        addFilters(query, parameters, request,
-                filterByCadd, filterByAm, filterByPopEve, filterByAlleleFreq,
-                filterByConservation, filterByEsm1b, filterStability);
+        // Base fields for DISTINCT
+        String baseSelect = "m.chromosome, m.genomic_position, m.allele, m.alt_allele, " +
+                "m.protein_position, m.codon_position";
 
-        // Build SELECT fields - we'll add score columns dynamically
-        String baseSelect = "m.chromosome, m.genomic_position, m.allele, alleles.alt_allele, " +
-                "m.protein_position, m.codon_position, m.accession";
-        StringBuilder selectFields = new StringBuilder(baseSelect);
-
-        // Add score fields if needed for sorting
-        if (sortByCadd) selectFields.append(", cadd.score");
-        else if (sortByAm) selectFields.append(", am.am_pathogenicity");
-        else if (sortByPopEve) selectFields.append(", popeve.popeve");
-        else if (sortByEsm1b) selectFields.append(", esm.score");
-
-        // Count query
+        // COUNT query (no ORDER BY, no LIMIT, with DISTINCT)
         long total = -1;
         if (!isDownload) {
-            String countSql = "SELECT COUNT(*) FROM (\n" + query + "\n) counted"; // COUNT(DISTINCT(baseSelect))
+            String countSql = "SELECT COUNT(*) FROM (\n" +
+                    query +
+                    "\n) cnt";
             total = jdbcTemplate.queryForObject(countSql, parameters, Long.class);
 
             if (total == 0) {
@@ -167,9 +158,10 @@ public class GenomicVariantRepo {
             }
         }
 
-        // Add ORDER BY
+        // Append ORDER BY and LIMIT to the complete query
         String sortOrder = "asc".equalsIgnoreCase(request.getOrder()) ? "ASC" : "DESC";
-        query.append("ORDER BY ");
+        query.append("\nORDER BY ");
+
         if (sortByCadd) {
             query.append("cadd.score ").append(sortOrder).append(", ");
         } else if (sortByAm) {
@@ -179,26 +171,24 @@ public class GenomicVariantRepo {
         } else if (sortByEsm1b) {
             query.append("esm.score ").append(sortOrder).append(", ");
         }
-        query.append("m.chromosome, m.genomic_position, m.protein_position, alleles.alt_allele\n");
+        query.append("m.protein_position, m.codon_position, alleles.alt_allele\n");
 
-        // Add pagination
-        query.append("LIMIT :pageSize OFFSET :offset\n");
+        query.append("LIMIT :pageSize OFFSET :offset");
         parameters.addValue("pageSize", pageable.getPageSize());
         parameters.addValue("offset", pageable.getOffset());
 
         // Execute query
-        String finalQuery = "SELECT " + selectFields + " FROM (\n" + query + "\n) results"; // DISTINCT(baseSelect)
-        List<VariantInput> variants = jdbcTemplate.query(finalQuery, parameters,
+        List<VariantInput> variants = jdbcTemplate.query(query.toString(), parameters,
                 (rs, rowNum) -> {
                     String chr = rs.getString("chromosome");
                     int pos = rs.getInt("genomic_position");
                     String ref = rs.getString("allele");
                     String alt = rs.getString("alt_allele");
                     return new GenomicInput(
-                            "%s %d %s %s".formatted(chr, pos, ref, alt),
+                            String.format("%s %d %s %s", chr, pos, ref, alt),
                             chr, pos, ref, alt
                     );
-        });
+                });
 
         return isDownload ? new PageImpl<>(variants) : new PageImpl<>(variants, pageable, total);
     }
@@ -231,7 +221,7 @@ public class GenomicVariantRepo {
         // Add filtered_mapping CTE
         query.append("filtered_mapping AS (\n");
         query.append(String.join("\n\nUNION\n\n", unionBranches));
-        query.append("\n),\n");
+        query.append("\n)");
 
         // PHASE 1: Apply highly selective feature filters BEFORE alt_allele expansion
         // This reduces the row count before multiplication
@@ -277,48 +267,50 @@ public class GenomicVariantRepo {
                         """.formatted(structureTable));
             }
 
-            query.append("\n)\n");
+            query.append("\n)");
         }
+
+        // SELECT clause
+        query.append("\nSELECT DISTINCT\n");
+        query.append("  m.chromosome, m.genomic_position, m.allele, alleles.alt_allele,\n");
+        query.append("  m.protein_position, m.codon_position");
+
+        // Add score fields if needed
+        if (joinCadd) query.append(", cadd.score");
+        if (joinAm) query.append(", am.am_pathogenicity");
+        if (joinPopEve) query.append(", popeve.popeve");
+        if (joinEsm1b) query.append(", esm.score");
 
         // PHASE 2: Expand alt_alleles and calculate codon
         String sourceTable = hasFeatureFilters ? "feature_filtered" : "filtered_mapping";
-        query.append("SELECT\n");
-        query.append("  ff.chromosome, ff.genomic_position, ff.allele, ff.accession,\n");
-        query.append("  ff.protein_position, ff.codon_position, ff.protein_seq,\n");
-        query.append("  ff.codon, ff.reverse_strand,\n");
-        query.append("  alleles.alt_allele");
 
-        if (joinCodonTable) {
-            query.append(",\n  c.amino_acid as mt_aa");
-        }
-
-        query.append("\nFROM ").append(sourceTable).append(" ff\n");
-        query.append("CROSS JOIN (VALUES ('A'), ('T'), ('G'), ('C')) AS alleles(alt_allele)\n");
-        query.append("  ON alleles.alt_allele <> ff.allele\n");
+        query.append("\nFROM ").append(sourceTable).append(" m\n");
+        query.append("JOIN (VALUES ('A'), ('T'), ('G'), ('C')) AS alleles(alt_allele)\n");
+        query.append("  ON alleles.alt_allele <> m.allele\n");
 
         // PHASE 3: Calculate codon
         if (joinCodonTable) {
             query.append("""
                     LEFT JOIN codon_table c ON c.codon = UPPER(CASE
-                      WHEN ff.codon_position = 1 THEN rna_base_for_strand(alleles.alt_allele, ff.reverse_strand) || substring(ff.codon, 2, 2)
-                      WHEN ff.codon_position = 2 THEN substring(ff.codon, 1, 1) || rna_base_for_strand(alleles.alt_allele, ff.reverse_strand) || substring(ff.codon, 3, 1)
-                      WHEN ff.codon_position = 3 THEN substring(ff.codon, 1, 2) || rna_base_for_strand(alleles.alt_allele, ff.reverse_strand)
-                      ELSE ff.codon
+                      WHEN m.codon_position = 1 THEN rna_base_for_strand(alleles.alt_allele, m.reverse_strand) || substring(m.codon, 2, 2)
+                      WHEN m.codon_position = 2 THEN substring(m.codon, 1, 1) || rna_base_for_strand(alleles.alt_allele, m.reverse_strand) || substring(m.codon, 3, 1)
+                      WHEN m.codon_position = 3 THEN substring(m.codon, 1, 2) || rna_base_for_strand(alleles.alt_allele, m.reverse_strand)
+                      ELSE m.codon
                     END)
                     """);
         }
-
-        // Wrap in another SELECT to rename columns back to 'm.*'
-        String innerQuery = query.toString();
-        query.setLength(0);
-        query.append("SELECT * FROM (\n");
-        query.append(innerQuery);
-        query.append(") m\n");
 
         // PHASE 4: Apply remaining filters and joins
         addRemainingJoins(query, filterKnown, filterByAlleleFreq, filterByConservation,
                 joinCadd, joinAm, joinPopEve, joinEsm1b, filterStability,
                 filterByCadd, filterByAm, filterByPopEve, filterByEsm1b);
+
+
+        // Add final WHERE clause filters
+        query.append("WHERE 1=1\n");
+        addFilters(query, parameters, request,
+                filterByCadd, filterByAm, filterByPopEve, filterByAlleleFreq,
+                filterByConservation, filterByEsm1b, filterStability);
     }
 
     /**
@@ -340,55 +332,61 @@ public class GenomicVariantRepo {
         List<String> featureUnions = new ArrayList<>();
 
         if (filterPocket) {
-            featureUnions.add(String.format("""
+            featureUnions.add("""
           SELECT DISTINCT struct_id as accession, unnest(pocket_resid) as position
           FROM %s
-        """, pocketTable));
+        """.formatted(pocketTable));
         }
 
         if (filterInteract) {
-            featureUnions.add(String.format("""
+            featureUnions.add("""
           SELECT accession, position FROM (
               SELECT a as accession, unnest(a_residues) as position FROM %s
               UNION ALL
               SELECT b as accession, unnest(b_residues) as position FROM %s
           ) i
-        """, interactionTable, interactionTable));
+        """.formatted(interactionTable, interactionTable));
         }
 
         if (filterExperimentalModel) {
-            featureUnions.add(String.format("""
+            featureUnions.add("""
           SELECT s.accession, pos as position
           FROM %s s
           CROSS JOIN generate_series(s.unp_start, s.unp_end) as pos
-        """, structureTable));
+        """.formatted(structureTable));
         }
 
         query.append(String.join("\n  UNION\n", featureUnions));
         query.append("\n)\n");
 
-        // Now join with mapping table and expand alt_alleles
-        query.append(String.format("""
-      SELECT
-        m.chromosome, m.genomic_position, m.allele, m.accession,
-        m.protein_position, m.codon_position, m.protein_seq,
-        m.codon, m.reverse_strand,
-        alleles.alt_allele
-      """));
+        // SELECT clause
+        query.append("SELECT DISTINCT\n");
+        query.append("  m.chromosome, m.genomic_position, m.allele, alt_alleles.alt_allele,\n");
+        query.append("  m.protein_position, m.codon_position");
 
-        if (joinCodonTable) {
-            query.append(",\n  c.amino_acid as mt_aa");
+        // Add score fields if needed
+        if (joinCadd) {
+            query.append(",\n  cadd.score");
+        }
+        if (joinAm) {
+            query.append(",\n  am.am_pathogenicity");
+        }
+        if (joinPopEve) {
+            query.append(",\n  popeve.popeve");
+        }
+        if (joinEsm1b) {
+            query.append(",\n  esm.score");
         }
 
-        query.append(String.format("""
-      
-      FROM %s m
-      INNER JOIN feature_positions fp 
-          ON fp.accession = m.accession 
-          AND fp.position = m.protein_position
-      CROSS JOIN (VALUES ('A'), ('T'), ('G'), ('C')) AS alleles(alt_allele)
-          ON alleles.alt_allele <> m.allele
-    """, mappingTable));
+
+        // FROM clause
+        query.append("\nFROM ").append(mappingTable).append(" m\n");
+        query.append("INNER JOIN feature_positions fp\n");
+        query.append("  ON fp.accession = m.accession\n");
+        query.append("  AND fp.position = m.protein_position\n");
+        query.append("JOIN (VALUES ('A'), ('T'), ('G'), ('C')) AS alleles(alt_allele)\n");
+        query.append("  ON alleles.alt_allele <> m.allele\n");
+
 
         if (joinCodonTable) {
             query.append("""
@@ -401,16 +399,16 @@ public class GenomicVariantRepo {
         """);
         }
 
-        // Wrap and add remaining joins
-        String innerQuery = query.toString();
-        query.setLength(0);
-        query.append("SELECT * FROM (\n");
-        query.append(innerQuery);
-        query.append("\n) m\n");
-
+        // Add remaining joins
         addRemainingJoins(query, filterKnown, filterByAlleleFreq, filterByConservation,
                 joinCadd, joinAm, joinPopEve, joinEsm1b, filterStability,
                 filterByCadd, filterByAm, filterByPopEve, filterByEsm1b);
+
+        // WHERE clause
+        query.append("WHERE 1=1\n");
+        addFilters(query, parameters, request,
+                filterByCadd, filterByAm, filterByPopEve, filterByAlleleFreq,
+                filterByConservation, filterByEsm1b, filterStability);
     }
 
     /**
@@ -418,109 +416,391 @@ public class GenomicVariantRepo {
      */
     private void buildQueryWithDbsnpFilter(
             StringBuilder query,
+            MapSqlParameterSource parameters,
             boolean joinCodonTable,
             boolean joinCadd, boolean joinAm, boolean joinPopEve, boolean joinEsm1b,
             boolean filterByAlleleFreq, boolean filterByConservation, boolean filterStability,
-            boolean filterByCadd, boolean filterByAm, boolean filterByPopEve, boolean filterByEsm1b) {
+            boolean filterByCadd, boolean filterByAm, boolean filterByPopEve, boolean filterByEsm1b,
+            MappingRequest request) {
 
-        // Start with dbSNP table (known variants)
-        query.append(String.format("""
-      SELECT
-        m.chromosome, m.genomic_position, m.allele, m.accession,
-        m.protein_position, m.codon_position, m.protein_seq,
-        m.codon, m.reverse_strand,
-        alt.alt_allele
-      """));
+        // SELECT clause (no WITH clause needed for this strategy)
+        query.append("SELECT DISTINCT\n");
+        query.append("  m.chromosome, m.genomic_position, m.allele, alt_alleles.alt_allele,\n");
+        query.append("  m.protein_position, m.codon_position");
 
-        if (joinCodonTable) {
-            query.append(",\n  c.amino_acid as mt_aa");
+        // Add score fields if needed
+        if (joinCadd) {
+            query.append(",\n  cadd.score");
+        }
+        if (joinAm) {
+            query.append(",\n  am.am_pathogenicity");
+        }
+        if (joinPopEve) {
+            query.append(",\n  popeve.popeve");
+        }
+        if (joinEsm1b) {
+            query.append(",\n  esm.score");
         }
 
-        query.append(String.format("""
-      
-      FROM %s d
-      CROSS JOIN LATERAL unnest(d.known_alts) AS alt(alt_allele)
-      INNER JOIN %s m ON m.chromosome = d.chr
-          AND m.genomic_position = d.pos
-          AND m.allele = d.ref
-    """, dbsnpLookupTable, mappingTable));
+        // FROM clause - start with dbSNP table
+        query.append("\nFROM ").append(dbsnpLookupTable).append(" d\n");
+        query.append("CROSS JOIN LATERAL unnest(d.known_alts) AS alt_alleles(alt_allele)\n");
+        query.append("INNER JOIN ").append(mappingTable).append(" m\n");
+        query.append("  ON m.chromosome = d.chr\n");
+        query.append("  AND m.genomic_position = d.pos\n");
+        query.append("  AND m.allele = d.ref\n");
 
+        // JOIN codon table
         if (joinCodonTable) {
             query.append("""
           LEFT JOIN codon_table c ON c.codon = UPPER(CASE
-              WHEN m.codon_position = 1 THEN rna_base_for_strand(alt.alt_allele, m.reverse_strand) || substring(m.codon, 2, 2)
-              WHEN m.codon_position = 2 THEN substring(m.codon, 1, 1) || rna_base_for_strand(alt.alt_allele, m.reverse_strand) || substring(m.codon, 3, 1)
-              WHEN m.codon_position = 3 THEN substring(m.codon, 1, 2) || rna_base_for_strand(alt.alt_allele, m.reverse_strand)
+              WHEN m.codon_position = 1 THEN rna_base_for_strand(alt_alleles.alt_allele, m.reverse_strand) || substring(m.codon, 2, 2)
+              WHEN m.codon_position = 2 THEN substring(m.codon, 1, 1) || rna_base_for_strand(alt_alleles.alt_allele, m.reverse_strand) || substring(m.codon, 3, 1)
+              WHEN m.codon_position = 3 THEN substring(m.codon, 1, 2) || rna_base_for_strand(alt_alleles.alt_allele, m.reverse_strand)
               ELSE m.codon
           END)
         """);
         }
 
-        // Wrap and add remaining joins
-        String innerQuery = query.toString();
-        query.setLength(0);
-        query.append("SELECT * FROM (\n");
-        query.append(innerQuery);
-        query.append("\n) m\n");
-
+        // Add remaining joins (skip filterKnown since we're already starting with dbSNP)
         addRemainingJoins(query, false, filterByAlleleFreq, filterByConservation,
                 joinCadd, joinAm, joinPopEve, joinEsm1b, filterStability,
                 filterByCadd, filterByAm, filterByPopEve, filterByEsm1b);
+
+        // WHERE clause
+        query.append("WHERE 1=1\n");
+        addFilters(query, parameters, request,
+                filterByCadd, filterByAm, filterByPopEve, filterByAlleleFreq,
+                filterByConservation, filterByEsm1b, filterStability);
     }
 
     /**
      * STRATEGY 4: Build query with score filters only (least optimal - full table scan risk)
      */
-    private void buildQueryWithScoreFilters(
+    private void buildQueryWithScoreFilters_(
             StringBuilder query,
+            MapSqlParameterSource parameters,
             boolean joinCodonTable,
             boolean joinCadd, boolean joinAm, boolean joinPopEve, boolean joinEsm1b,
             boolean filterByAlleleFreq, boolean filterByConservation, boolean filterStability,
-            boolean filterByCadd, boolean filterByAm, boolean filterByPopEve, boolean filterByEsm1b) {
+            boolean filterByCadd, boolean filterByAm, boolean filterByPopEve, boolean filterByEsm1b,
+            MappingRequest request) {
 
-        // No highly selective filters - must scan mapping table
-        // At least expand alt_alleles and compute codon first before joining huge score tables
-        query.append(String.format("""
-      SELECT
-        m.chromosome, m.genomic_position, m.allele, m.accession,
-        m.protein_position, m.codon_position, m.protein_seq,
-        m.codon, m.reverse_strand,
-        alleles.alt_allele
-      """));
+        // SELECT clause (no WITH clause, no feature filters)
+        query.append("SELECT DISTINCT\n");
+        query.append("  m.chromosome, m.genomic_position, m.allele, alt_alleles.alt_allele,\n");
+        query.append("  m.protein_position, m.codon_position");
 
-        if (joinCodonTable) {
-            query.append(",\n  c.amino_acid as mt_aa");
+        // Add score fields if needed
+        if (joinCadd) {
+            query.append(",\n  cadd.score");
+        }
+        if (joinAm) {
+            query.append(",\n  am.am_pathogenicity");
+        }
+        if (joinPopEve) {
+            query.append(",\n  popeve.popeve");
+        }
+        if (joinEsm1b) {
+            query.append(",\n  esm.score");
         }
 
-        query.append(String.format("""
-      
-      FROM %s m
-      CROSS JOIN (VALUES ('A'), ('T'), ('G'), ('C')) AS alleles(alt_allele)
-          ON alleles.alt_allele <> m.allele
-    """, mappingTable));
+        // FROM clause - start with mapping table (full table scan - expensive!)
+        query.append("\nFROM ").append(mappingTable).append(" m\n");
+        query.append("JOIN (VALUES ('A'), ('T'), ('G'), ('C')) AS alt_alleles(alt_allele)\n");
+        query.append("  ON alt_alleles.alt_allele <> m.allele\n");
 
+        // JOIN codon table
         if (joinCodonTable) {
             query.append("""
           LEFT JOIN codon_table c ON c.codon = UPPER(CASE
-              WHEN m.codon_position = 1 THEN rna_base_for_strand(alleles.alt_allele, m.reverse_strand) || substring(m.codon, 2, 2)
-              WHEN m.codon_position = 2 THEN substring(m.codon, 1, 1) || rna_base_for_strand(alleles.alt_allele, m.reverse_strand) || substring(m.codon, 3, 1)
-              WHEN m.codon_position = 3 THEN substring(m.codon, 1, 2) || rna_base_for_strand(alleles.alt_allele, m.reverse_strand)
+              WHEN m.codon_position = 1 THEN rna_base_for_strand(alt_alleles.alt_allele, m.reverse_strand) || substring(m.codon, 2, 2)
+              WHEN m.codon_position = 2 THEN substring(m.codon, 1, 1) || rna_base_for_strand(alt_alleles.alt_allele, m.reverse_strand) || substring(m.codon, 3, 1)
+              WHEN m.codon_position = 3 THEN substring(m.codon, 1, 2) || rna_base_for_strand(alt_alleles.alt_allele, m.reverse_strand)
               ELSE m.codon
           END)
         """);
         }
 
-        // Wrap and add remaining joins
-        String innerQuery = query.toString();
-        query.setLength(0);
-        query.append("SELECT * FROM (\n");
-        query.append(innerQuery);
-        query.append("\n) m\n");
-
+        // Add remaining joins
         addRemainingJoins(query, false, filterByAlleleFreq, filterByConservation,
                 joinCadd, joinAm, joinPopEve, joinEsm1b, filterStability,
                 filterByCadd, filterByAm, filterByPopEve, filterByEsm1b);
+
+        // WHERE clause
+        query.append("WHERE 1=1\n");
+        addFilters(query, parameters, request,
+                filterByCadd, filterByAm, filterByPopEve, filterByAlleleFreq,
+                filterByConservation, filterByEsm1b, filterStability);
     }
+
+    /*
+    -- Critical for score-first strategy
+CREATE INDEX idx_allelefreq_chr_pos_ref ON gnomad_allele_freq (chr, pos, ref);
+CREATE INDEX idx_cadd_chr_pos_ref ON rel_2025_01_coding_cadd (chromosome, position, reference_allele);
+CREATE INDEX idx_conservation_acc_pos_aa ON conserv_score (accession, position, aa);
+
+-- For mapping reverse lookup
+CREATE INDEX idx_mapping_chr_pos_ref ON rel_2025_01_genomic_protein_mapping (chromosome, genomic_position, allele);
+     */
+    private void buildQueryWithScoreFilters(
+            StringBuilder query,
+            MapSqlParameterSource parameters,
+            boolean joinCodonTable,
+            boolean joinCadd, boolean joinAm, boolean joinPopEve, boolean joinEsm1b,
+            boolean filterByAlleleFreq, boolean filterByConservation, boolean filterStability,
+            boolean filterByCadd, boolean filterByAm, boolean filterByPopEve, boolean filterByEsm1b,
+            MappingRequest request) {
+
+        // Determine most selective starting point
+        // Priority: alleleFreq > conservation > CADD > PopEVE > AlphaMissense
+
+        if (filterByAlleleFreq) {
+            buildQueryStartingWithAlleleFreq(query, parameters, joinCodonTable,
+                    joinCadd, joinAm, joinPopEve, joinEsm1b,
+                    filterByConservation, filterStability,
+                    filterByCadd, filterByAm, filterByPopEve, filterByEsm1b,
+                    request);
+
+        } else if (filterByConservation) {
+            buildQueryStartingWithConservation(query, parameters, joinCodonTable,
+                    joinCadd, joinAm, joinPopEve, joinEsm1b,
+                    filterStability,
+                    filterByCadd, filterByAm, filterByPopEve, filterByEsm1b,
+                    request);
+
+        } /*else if (filterByCadd) {
+            buildQueryStartingWithCadd(query, parameters, joinCodonTable,
+                    joinAm, joinPopEve, joinEsm1b,
+                    filterStability,
+                    filterByAm, filterByPopEve, filterByEsm1b,
+                    request);
+
+        } else if (filterByPopEve) {
+            buildQueryStartingWithPopEve(query, parameters, joinCodonTable,
+                    joinCadd, joinAm, joinEsm1b,
+                    filterStability,
+                    joinCadd, filterByAm, filterByEsm1b,
+                    request);
+
+        } else {
+            // Last resort: full table scan (should rarely happen due to validation)
+            buildQueryWithFullScan(query, parameters, joinCodonTable,
+                    joinCadd, joinAm, joinPopEve, joinEsm1b,
+                    filterStability,
+                    request);
+        }*/
+    }
+
+    private void buildQueryStartingWithAlleleFreq(
+            StringBuilder query,
+            MapSqlParameterSource parameters,
+            boolean joinCodonTable,
+            boolean joinCadd, boolean joinAm, boolean joinPopEve, boolean joinEsm1b,
+            boolean filterByConservation, boolean filterStability,
+            boolean filterByCadd, boolean filterByAm, boolean filterByPopEve, boolean filterByEsm1b,
+            MappingRequest request) {
+
+        // Build WHERE clause for alleleFreq filter
+        List<String> afClauses = new ArrayList<>();
+        for (int i = 0; i < request.getAlleleFreq().size(); i++) {
+            AlleleFreqCategory category = request.getAlleleFreq().get(i);
+            String minParam = "afMin" + i;
+            String maxParam = "afMax" + i;
+            afClauses.add("(af.af >= :" + minParam + " AND af.af < :" + maxParam + ")");
+            parameters.addValue(minParam, category.getMin());
+            parameters.addValue(maxParam, category.getMax());
+        }
+
+        // SELECT clause
+        query.append("SELECT DISTINCT\n");
+        query.append("  m.chromosome, m.genomic_position, m.allele, af.alt as alt_allele,\n");
+        query.append("  m.protein_position, m.codon_position");
+
+        if (joinCadd) query.append(",\n  cadd.score");
+        if (joinAm) query.append(",\n  am.am_pathogenicity");
+        if (joinPopEve) query.append(",\n  popeve.popeve");
+        if (joinEsm1b) query.append(",\n  esm.score");
+
+        // FROM alleleFreq with filter FIRST, then join mapping
+        query.append("\nFROM ").append(alleleFreqTable).append(" af\n");
+        query.append("INNER JOIN ").append(mappingTable).append(" m\n");
+        query.append("  ON m.chromosome = af.chr\n");
+        query.append("  AND m.genomic_position = af.pos\n");
+        query.append("  AND m.allele = af.ref\n");
+
+        if (joinCodonTable) {
+            query.append("""
+          LEFT JOIN codon_table c ON c.codon = UPPER(CASE
+              WHEN m.codon_position = 1 THEN rna_base_for_strand(af.alt, m.reverse_strand) || substring(m.codon, 2, 2)
+              WHEN m.codon_position = 2 THEN substring(m.codon, 1, 1) || rna_base_for_strand(af.alt, m.reverse_strand) || substring(m.codon, 3, 1)
+              WHEN m.codon_position = 3 THEN substring(m.codon, 1, 2) || rna_base_for_strand(af.alt, m.reverse_strand)
+              ELSE m.codon
+          END)
+        """);
+        }
+
+        if (filterByConservation) {
+            query.append("""
+                INNER JOIN %s cons ON cons.accession = m.accession 
+                  AND cons.position = m.protein_position 
+                  AND cons.aa = m.protein_seq
+                """.formatted(conservationTable));
+        }
+
+        // Add other score table joins (CADD, PopEVE, etc.)
+        if (joinCadd) {
+            String joinType = filterByCadd ? "INNER" : "LEFT";
+            query.append("""
+            %s JOIN %s cadd ON cadd.chromosome = m.chromosome 
+              AND cadd.position = m.genomic_position 
+              AND cadd.reference_allele = m.allele 
+              AND cadd.alt_allele = af.alt
+            """.formatted(joinType, caddTable));
+        }
+
+        if (joinAm) {
+            String joinType = filterByAm ? "INNER" : "LEFT";
+            query.append("""
+            %s JOIN %s am ON am.accession = m.accession 
+              AND am.position = m.protein_position 
+              AND am.wt_aa = m.protein_seq 
+              AND am.mt_aa = c.amino_acid
+            """.formatted(joinType, amTable));
+        }
+
+        if (joinPopEve) {
+            String joinType = filterByPopEve ? "INNER" : "LEFT";
+            query.append("""
+            %s JOIN %s unp_ref ON unp_ref.uniprot_acc = m.accession
+            %s JOIN %s popeve ON popeve.refseq_protein = unp_ref.refseq_acc 
+              AND popeve.position = m.protein_position 
+              AND popeve.wt_aa = m.protein_seq 
+              AND popeve.mt_aa = c.amino_acid
+            """.formatted(joinType, uniprotRefseqTable, joinType, popeveTable));
+        }
+
+        if (joinEsm1b) {
+            String joinType = filterByEsm1b ? "INNER" : "LEFT";
+            query.append("""
+            %s JOIN %s esm ON esm.accession = m.accession 
+              AND esm.position = m.protein_position 
+              AND esm.mt_aa = c.amino_acid
+            """.formatted(joinType, esmTable));
+        }
+
+        if (filterStability) {
+            query.append("""
+            INNER JOIN %s f ON f.protein_acc = m.accession 
+              AND f.position = m.protein_position 
+              AND f.mutated_type = c.amino_acid
+            """.formatted(foldxTable));
+        }
+
+        // WHERE clause with filters
+        query.append("WHERE (").append(String.join(" OR ", afClauses)).append(")\n");
+
+        // Add remaining filters (skip alleleFreq since it's already in WHERE)
+        if (filterByCadd) {
+            List<String> caddClauses = new ArrayList<>();
+            for (int i = 0; i < request.getCadd().size(); i++) {
+                CaddCategory category = request.getCadd().get(i);
+                String minParam = "caddMin" + i;
+                String maxParam = "caddMax" + i;
+                caddClauses.add("(cadd.score >= :" + minParam + " AND cadd.score < :" + maxParam + ")");
+                parameters.addValue(minParam, category.getMin());
+                parameters.addValue(maxParam, category.getMax());
+            }
+            query.append("AND (").append(String.join(" OR ", caddClauses)).append(")\n");
+        }
+
+        // Add other filters similarly...
+        if (filterByAm) {
+            Integer[] amValues = request.getAm().stream()
+                    .map(AmClass::getValue)
+                    .toArray(Integer[]::new);
+            query.append("AND am.am_class = ANY(:amClasses)\n");
+            parameters.addValue("amClasses", amValues);
+        }
+
+        if (filterByPopEve) {
+            List<String> popeveClauses = new ArrayList<>();
+            for (int i = 0; i < request.getPopeve().size(); i++) {
+                PopEveClass category = request.getPopeve().get(i);
+                String minParam = "popeveMin" + i;
+                String maxParam = "popeveMax" + i;
+                if (Double.isInfinite(category.getMin()) && category.getMin() < 0) {
+                    popeveClauses.add("(popeve.popeve < :" + maxParam + ")");
+                    parameters.addValue(maxParam, category.getMax());
+                } else if (Double.isInfinite(category.getMax())) {
+                    popeveClauses.add("(popeve.popeve >= :" + minParam + ")");
+                    parameters.addValue(minParam, category.getMin());
+                } else {
+                    popeveClauses.add("(popeve.popeve >= :" + minParam + " AND popeve.popeve < :" + maxParam + ")");
+                    parameters.addValue(minParam, category.getMin());
+                    parameters.addValue(maxParam, category.getMax());
+                }
+            }
+            query.append("AND (").append(String.join(" OR ", popeveClauses)).append(")\n");
+        }
+
+        if (filterByConservation) {
+            if (request.getConservationMin() != null) {
+                query.append("AND cons.score >= :conservationMin\n");
+                parameters.addValue("conservationMin", request.getConservationMin());
+            }
+            if (request.getConservationMax() != null) {
+                query.append("AND cons.score <= :conservationMax\n");
+                parameters.addValue("conservationMax", request.getConservationMax());
+            }
+        }
+
+        if (filterStability) {
+            Set<StabilityChange> changes = EnumSet.copyOf(request.getStability());
+            if (!changes.equals(EnumSet.allOf(StabilityChange.class))) {
+                if (changes.contains(StabilityChange.LIKELY_DESTABILISING)) {
+                    query.append("AND f.foldx_ddg >= 2\n");
+                } else if (changes.contains(StabilityChange.UNLIKELY_DESTABILISING)) {
+                    query.append("AND f.foldx_ddg < 2\n");
+                }
+            }
+        }
+    }
+
+    private void buildQueryStartingWithConservation(
+            StringBuilder query,
+            MapSqlParameterSource parameters,
+            boolean joinCodonTable,
+            boolean joinCadd, boolean joinAm, boolean joinPopEve, boolean joinEsm1b,
+            boolean filterStability,
+            boolean filterByCadd, boolean filterByAm, boolean filterByPopEve, boolean filterByEsm1b,
+            MappingRequest request) {
+
+        // SELECT clause
+        query.append("SELECT DISTINCT\n");
+        query.append("  m.chromosome, m.genomic_position, m.allele, alt_alleles.alt_allele,\n");
+        query.append("  m.protein_position, m.codon_position");
+
+        if (joinCadd) query.append(",\n  cadd.score");
+        if (joinAm) query.append(",\n  am.am_pathogenicity");
+        if (joinPopEve) query.append(",\n  popeve.popeve");
+        if (joinEsm1b) query.append(",\n  esm.score");
+
+        // FROM conservation with filter FIRST
+        query.append("\nFROM ").append(conservationTable).append(" cons\n");
+        query.append("INNER JOIN ").append(mappingTable).append(" m\n");
+        query.append("  ON m.accession = cons.accession\n");
+        query.append("  AND m.protein_position = cons.position\n");
+        query.append("  AND m.protein_seq = cons.aa\n");
+
+        // NOW expand alt_alleles (much smaller base)
+        query.append("JOIN (VALUES ('A'), ('T'), ('G'), ('C')) AS alt_alleles(alt_allele)\n");
+        query.append("  ON alt_alleles.alt_allele <> m.allele\n");
+
+        // Rest of joins and WHERE...
+        // (similar pattern to above)
+    }
+
 
     /*
     Critical indexes:
@@ -717,7 +997,7 @@ public class GenomicVariantRepo {
                     INNER JOIN %s d ON d.chr = m.chromosome
                       AND d.pos = m.genomic_position
                       AND d.ref = m.allele
-                      AND m.alt_allele = ANY(d.known_alts)
+                      AND alleles.alt_allele = ANY(d.known_alts)
                     """.formatted(dbsnpLookupTable));
         }
 
@@ -736,7 +1016,7 @@ public class GenomicVariantRepo {
                     INNER JOIN %s af ON af.chr = m.chromosome 
                       AND af.pos = m.genomic_position 
                       AND af.ref = m.allele 
-                      AND af.alt = m.alt_allele
+                      AND af.alt = alleles.alt_allele
                     """.formatted(alleleFreqTable));
         }
 
@@ -764,7 +1044,7 @@ public class GenomicVariantRepo {
                 %s JOIN %s cadd ON cadd.chromosome = m.chromosome 
                   AND cadd.position = m.genomic_position 
                   AND cadd.reference_allele = m.allele 
-                  AND cadd.alt_allele = m.alt_allele
+                  AND cadd.alt_allele = alleles.alt_allele
                 """.formatted(joinType, caddTable));
         }
 
@@ -775,7 +1055,7 @@ public class GenomicVariantRepo {
                 %s JOIN %s am ON am.accession = m.accession 
                   AND am.position = m.protein_position 
                   AND am.wt_aa = m.protein_seq 
-                  AND am.mt_aa = m.mt_aa
+                  AND am.mt_aa = c.amino_acid
                 """.formatted(joinType, amTable));
         }
 
@@ -788,7 +1068,7 @@ public class GenomicVariantRepo {
                 %s JOIN %s popeve ON popeve.refseq_protein = unp_ref.refseq_acc 
                   AND popeve.position = m.protein_position 
                   AND popeve.wt_aa = m.protein_seq 
-                  AND popeve.mt_aa = m.mt_aa
+                  AND popeve.mt_aa = c.amino_acid
                 """.formatted(joinType, uniprotRefseqTable, joinType, popeveTable));
         }
 
@@ -798,7 +1078,7 @@ public class GenomicVariantRepo {
             query.append("""
                 %s JOIN %s esm ON esm.accession = m.accession 
                   AND esm.position = m.protein_position 
-                  AND esm.mt_aa = m.mt_aa
+                  AND esm.mt_aa = c.amino_acid
                 """.formatted(joinType, esmTable));
         }
 
@@ -807,7 +1087,7 @@ public class GenomicVariantRepo {
             query.append("""
                 INNER JOIN %s f ON f.protein_acc = m.accession 
                   AND f.position = m.protein_position 
-                  AND f.mutated_type = m.mt_aa
+                  AND f.mutated_type = c.amino_acid
                 """.formatted(foldxTable));
         }
     }
